switch from okta to keycloak

--- a/blog/src/main/resources/config/application-prod.yml
+++ b/blog/src/main/resources/config/application-prod.yml
@@ -17,7 +17,7 @@ logging:
   level:
     ROOT: INFO
     io.github.jhipster: INFO
-    com.okta.developer.blog: DEBUG
+    com.okta.developer.blog: INFO
 
 eureka:
   instance:
