--- a/gateway/src/main/resources/config/application-prod.yml
+++ b/gateway/src/main/resources/config/application-prod.yml
@@ -17,7 +17,7 @@ logging:
   level:
     ROOT: INFO
     io.github.jhipster: INFO
-    com.okta.developer.gateway: DEBUG
+    com.okta.developer.gateway: INFO
 
 eureka:
   instance:
