--- a/store/src/main/resources/config/application-prod.yml
+++ b/store/src/main/resources/config/application-prod.yml
@@ -17,7 +17,7 @@ logging:
   level:
     ROOT: INFO
     io.github.jhipster: INFO
-    com.okta.developer.store: DEBUG
+    com.okta.developer.store: INFO
 
 eureka:
   instance:
